crates/macros/tests/fail/first.stderr
error: expected string literal
 --> tests/fail/first.rs:8:19
  |
8 |     #[wasm_export(unchecked_return_type = string)]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
